@@ -175,12 +175,13 @@
 				<configuration>
 					<fallback>false</fallback>
 				</configuration>
-			</plugin> -->			<plugin>
+			</plugin> -->
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<argLine>
-						@{argLine} -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/1.17.8/byte-buddy-agent-1.17.8.jar
+						@{argLine} -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/1.17.8/byte-buddy-agent-1.17.8.jar --enable-native-access=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
